tests-system/bulk/output
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:1921: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:1997: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3203: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3216: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3229: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3242: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3255: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3268: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3281: error: unknown symbol Unknown
parent_requirements = [Unknown]
                       ^^^^^^^ bulk/bulk_566329.trlc:3294: error: unknown symbol Unknown
Processed 1 model(s), 0 check(s) and 85 requirement file(s) and found 10 error(s)
